change color of the sidebar and fix gap issue with the body and style the search bar

--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
 body {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    gap: 20px;
     background-color: #e2e8f0;
+    margin: 0px;
 }
 .header {
     display: grid;
@@ -15,25 +15,32 @@ body {
 }
 
 .buttons {
-    grid-column: 2 /2;
+    grid-column: 2 / 2;
+    align-self: center;
+
 }
 
 .header button {
     background-color: #06b6d4;
     border-radius: 20px;
     padding: 10px 20px 10px 20px;
-    border: solid;
+    border: none;
     margin: 5px;
 }
 
 .header input {
     border-radius: 10px;
     border: none;
+    background-color: #a8a7a683;
+    padding: 3px 10px 3px 10px;
+    width: 40vw;
 }
 
 .header .search-bar {
-    align-items: stretch;
+    margin: 10px 20px 10px 20px;
 }
+
+
 
 .header img {
     height: 20px;
@@ -59,6 +66,7 @@ body {
     grid-column: 1/-1;
     background-color: white;
     margin: 0px;
+    box-shadow: 2px 2px 2px rgba(145, 144, 144, 0.741);
 }
 
 .projects {
@@ -66,12 +74,12 @@ body {
     grid-template-columns: repeat(2,minmax(220px, 350px));
     grid-template-rows: repeat(3, minmax(100px, 200px));
     gap: 15px;
-    
+    margin-left: 15px;
 }
 
 .projects div {
     border: none;
-    border-left: rgb(17, 127, 135) solid 5px;
+    border-left: #06b6d4 solid 7px;
     border-radius: 10px;
     padding: 10px;
     background-color: white ;
@@ -79,6 +87,7 @@ body {
     text-overflow: ellipsis;
     font-size: .7em;
     display: grid;
+    box-shadow: 2px 2px 2px rgba(199, 198, 198, 0.741);
 
 }
 
@@ -89,6 +98,7 @@ div .project-icons {
     border: none;
     display: inline-block; 
     justify-self: end;
+    box-shadow: none;
 }
 
 p {
@@ -99,7 +109,7 @@ p {
 }
 
 .sidebar {
-    background-color: rgb(209, 171, 0);
+    background-color: #c2410c;
     min-width: 220px;
     font-size: .8em;
 }
@@ -132,11 +142,11 @@ h4 {
     padding: 0px;
 }
 .announcements {
+    /* height: 360px; */
     border: none;
     padding: 10px;
     border-radius: 10px;
-    
-   
+    box-shadow: 2px 2px 2px rgba(199, 198, 198, 0.741);
 }
 
 .announcements p {
@@ -155,18 +165,21 @@ h4 {
 }
 
 .trending {
+    height: 200px;
     border: none;
     padding: 5px;
     border-radius: 10px;
     color: gray;
     font-size: .4em;
+    box-shadow: 2px 2px 2px rgba(199, 198, 198, 0.741);
 }
 
 .rightside {
     min-width: 200px;
     display: grid;
     gap: 10px;
-    grid-template-rows: 1fr, 1fr;
+    grid-template-rows: repeat( 2, 1fr);
+    margin-right: 15px;
 }
 
 .rightside div {
